--- a/assets/css/carrinho.css
+++ b/assets/css/carrinho.css
@@ -87,7 +87,9 @@ html {
     font-weight:  normal;
     color: var(--branco);
 }
-
+.carrinho-link{
+    font-size: 26px;
+}
 .edit{
     display: none;
 }
